@@ -1,3 +1,4 @@
+ - Add function ident_zeros for inserting one on diagonal for zero rows
  - Add LU support for Trilinos interface
 0.9.7 [2010-02-17]
  - Add support for specifying facet orientation in assembly over interior facets
